[package]
name = "item105"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
regex = "1.10.2"
reqwest = {version = "0.11.23", features = ["blocking", "rustls-tls"]}
rss = "2.0.6"
serde = "1.0.193"
serde_json = "1.0.108"
url = "2.5.0"

