[package]
name = "item105"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["twitter_bindings"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
http = "1.0.0"
oauth1 = { version = "0.5", package = "oauth1-request" }
clio = { version = "0.3.5", features = ["clap-parse"]}
regex = "1.10.2"
reqwest = {version = "0.11.23", features = ["blocking", "rustls-tls"]}
rss = "2.0.6"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"]}
twitter-v2 = { path = "twitter_bindings" }
url = "2.5.0"
prometheus = { version = "0.13.3", features = [ "push" ] }

